# opticstream

./: .env  .env.example  .gitignore  DESIGN.md  EVENTS_DOCUMENTATION.md  I55_archive.py  I65.py  I80.py  I80_archive.py  I80_slice8.py  I80_slice8_new.py  README.md  README_plane_fitting.md  STATE_MANAGEMENT.md  batch_detection_flow.py  deploy_all_flows.py  deploy_flow.py  deploy_register_slice_event.py  deploy_state_management.py  deploy_tile_batch_flows.py  docker-compose.yaml  emit_mosaic_processed_event.py  emit_slice_ready_event.py  find_tile_plane.py  mkdocs.yml  mosaic_001_surf.yaml  pyproject.toml  requirements.txt  retry_failed_runs.py  start.py  start.sh
.github/workflows/: docs.yml
data_processing/enface/: vol2enface.py
data_processing/spectral_raw/: spectral2complex.py  spectral2complex_old.py
data_processing/stitch/: fiji_stitch.py  fit_coord_files.py  generate_mask.py  helper.py  process_tile_coord.py
data_processing/volume_3d/: complex2vol.py
docs/: design.md  index.md  workflow_flowchart.md  workflow_flowchart_simple.txt
docs/archived/: TILE_BATCH_EVENTS_SETUP.md
docs/concepts/: acquisition_watchers.md  data_processing_pipeline.md  flows_and_state_models.md  project_overview.md  scan_configurations.md
docs/developer/: architecture.md  cli_overview.md  code_layout.md  contributing.md  documentation_workflow.md  oct_algorithms_and_qc.md  oct_data_flow.md  oct_deployment_and_hosts.md  oct_design_overview.md  oct_events_and_state.md  oct_future_extensions.md  oct_matlab_and_stitching.md  prefect_state_design.md  testing_and_ci.md  watcher_design_lsm_oct.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  quickstart_oct.md  setup.md
docs/infrastructure/: acquistion_host.md  storage_data_flow.md  storage_pool.md
docs/reference/: cli_commands.md  python_api.md
docs/user-guides/: deployment.md  lsm_workflow.md  psoct_workflow.md  troubleshooting.md
enface/: vol2enface.py
notebooks/: 3daxis.ipynb  stack.ipynb  stack.py
opticstream/: process_priority_daemon_cli.py
opticstream/artifacts/: __init__.py  common.py  lsm.py  oct.py  publish_hooks.py
opticstream/cli/: __init__.py  deploy_cmds.py  init.py  process_priority.py  root.py  setup_common.py  state_common.py  utils_cmds.py
opticstream/config/: __init__.py  blocks.py  constants.py  lsm_scan_config.py  pipeline_opts_builder.py  project_config.py  psoct_scan_config.py  utils.py
opticstream/data_processing/: convert_image.py
opticstream/events/: __init__.py  event_emitter_core.py  lsm_event_emitters.py  lsm_events.py  psoct_event_emitters.py  psoct_events.py  utils.py
opticstream/flows/: mosaic_processing_flow.py  process_tile_batch_complex2processed_flow.py  process_tile_batch_flow.py  slack_notification_flow.py  slice_registration_flow.py  state_management_flow.py  upload_flow.py  volume_stitching_flow.py
opticstream/hooks/: __init__.py  check_channel_ready_hook.py  check_mosaic_ready_hook.py  check_slice_ready_hook.py
opticstream/scripts/: find_tile_region.py  find_volume_surface.py
opticstream/state/: __init__.py  batch_state_utils.py  flags.py  lsm_project_state.py  milestone_hooks.py  milestone_runtime.py  milestone_wrappers_lsm.py  milestone_wrappers_psoct.py  oct_project_state.py  project_state_core.py  project_state_postgres.py  state_classes.py  state_guards.py
opticstream/tasks/: __init__.py  archive_file.py  (+4 more)
sample_data/: info.yaml
scratch/: I55_archive.py  I80.py  I80_3dvolume.py
scripts/: README_plane_fitting.md  compare_hash_files.py  edit_tile_info_grid.py  filter_tiles_by_signal.py  find_tile_plane.py  find_tile_plane_two_stage.py  find_volume_surface.py  hash_dir.py
spectral_raw/: spectral2complex.py
stitch/: helper.py  process_tile_coord_new.py  stitch2d.py  stitch_all.py
tests/: test_dandi_upload.py  test_filename_utils_lsm.py  test_flow_run_name_parse.py  test_lsm_delete_cli.py  test_lsm_flow_helpers.py  test_lsm_project_state.py  test_lsm_state_guards.py  test_lsm_strip_update_flow.py  test_oct_watch_mosaic3.py  test_pipeline_opts_builder.py  test_process_priority_thread.py  test_psoct_flow_utils.py  test_scoped_events.py
volume_3d/: complex2processed.py  complex2vol.py
workflow/: DESIGN.md  README.md  __init__.py  flows.py  jpgwatch.py  tasks.py
workflow_old/: 3daxiswatch.py  README.md  __init__.py  config.py  config.yaml.example  flows.py  jpgwatch.py  main.py  proto.py  spectral_watch.py  tasks.py  upload_queue.py
(+156 files in other folders)
