[project]
name = "opticstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.3.0",
    "linc-convert[all] @ git+https://github.com/lincbrain/linc-convert.git@lsm-features",
    "nifti-zarr @ git+https://github.com/calvinchai/nifti-zarr-py.git@port-multizarr",
    "psoct-toolbox @ git+https://github.com/calvinchai/psoct-toolbox.git",
    "matplotlib>=3.10.8",
    "prefect[shell,slack]>=3.6.20",
    "watchdog",
    "psutil",
    "slack-sdk",
    "pydantic",
    "jinja2",
    "PyYAML",
    "dask",
    "nibabel",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.scripts]
opticstream = "opticstream.cli:main"
ops = "opticstream.cli:main"

# [tool.uv.sources]
# linc-convert = { path = "/space/megaera/1/users/kchai/linc-convert" }
# nifti-zarr = { path = "/space/megaera/1/users/kchai/nifti-zarr" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opticstream*"]
exclude = ["notebooks*"]